# gsoc2023-jderobot

./: README.md
python-challenge/: README.md  brownian-motion.py
robotics-academy-challenge/: README.md  exercise-info.md  globalnav.py
ros2_challenge/: README.md
ros2_challenge/install/: local_setup.sh  setup.sh
ros2_challenge/install/patrolling_example/include/patrolling_example/: BatteryChecker.hpp  Recharge.hpp
ros2_challenge/install/patrolling_example/lib/patrolling_example/: patrolling_example
ros2_challenge/install/patrolling_example/share/patrolling_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
ros2_challenge/install/patrolling_example/share/patrolling_example/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  patrolling_exampleConfig-version.cmake  patrolling_exampleConfig.cmake
ros2_challenge/install/patrolling_example/share/patrolling_example/environment/: ament_prefix_path.dsv  path.dsv
ros2_challenge/install/patrolling_example/share/patrolling_example/launch/: example_bringup.py
ros2_challenge/install/pubsub_challenge/lib/pubsub_challenge/: listener  talker
ros2_challenge/install/pubsub_challenge/share/pubsub_challenge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.zsh
ros2_challenge/log/: latest_build  latest_list
ros2_challenge/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_challenge/src/cpp_pubsub/src/: publisher_member_function.cpp
ros2_challenge/src/install/: local_setup.sh  setup.sh
ros2_challenge/src/log/: latest_build
ros2_challenge/src/patrolling_example/: CMakeLists.txt
ros2_challenge/src/patrolling_example/behavior_tree_xml/: example.xml
ros2_challenge/src/patrolling_example/include/patrolling_example/: BatteryChecker.hpp  GetWaypoint.hpp  Location.hpp  Move.hpp  Recharge.hpp
ros2_challenge/src/patrolling_example/include/patrolling_example/ctrl_support/: BTActionNode.hpp  BTLifecycleCtrlNode.hpp
ros2_challenge/src/patrolling_example/launch/: example_bringup.py
ros2_challenge/src/patrolling_example/map/: map.pgm
ros2_challenge/src/patrolling_example/param/: waffle.yaml
ros2_challenge/src/patrolling_example/src/: patrolling_example_main.cpp
ros2_challenge/src/patrolling_example/src/patrolling_example/: BatteryChecker.cpp  GetWaypoint.cpp  Location.cpp  Move.cpp  Recharge.cpp
(+48 files in other folders)
